# spadesTDD

./: CMakeLists.txt  README.md  auto_test.sh
cmake/: Linux.cmake  Tests.cmake
include/: BidVariation.h  Deck.h  Spades.h  spades.h
include/data/: Bid.h  Card.h  CardValue.h  CardValueComparison.h  CardValueEnum.h  Player.h  Score.h  Seat.h  SpadesMemento.h  State.h
include/data/card/: Card.h  CardValueComparison.h  CardValueSerialization.h
include/data/memento/: SpadesMemento.h
include/global/: PortableRandom.h
include/history/: SpadesCommand.h  SpadesCommandOrder.h  SpadesHistory.h
include/rules/: BidVariation.h  BidVariationController.h  BidVariationType.h  Deck.h  Trick.h  TrumpVariation.h  TrumpVariationController.h  TrumpVariationType.h  Turn.h
include/spades/: Spades.h  pch.h
include/spades/data/: Bid.h  Move.h  PortableRandom.h  Score.h  Seat.h  SeatUtils.h  Serializable.h  State.h
include/spades/data/card/: Card.h  CardValue.h  CardValueComparison.h
include/spades/data/memento/: SpadesMemento.h
include/spades/history/: HistoryState.h  MoveContainer.h  SpadesCommand.h  SpadesCommandOrder.h  SpadesHistory.h
include/spades/rules/: BidVariation.h  BidVariationController.h  Constants.h  Deck.h  ScoreSettings.h  Trick.h  TrumpVariation.h  TrumpVariationController.h
include/spades_ai/: AIAction.h  AIBid.h  AIController.h  AIObservation.h  AIPlacer.h  AIStrategy.h  Analyze.h  Net.h  NetAIPlacer.h  RandomAIPlacer.h  Serializable.h
include/spades_ai/logic/: AIAction.h  AIBid.h  AIPlacer.h  AIStrategy.h  Action.h  NetAIPlacer.h  NetAction.h  NetUtils.h  Observation.h  RandomAIPlacer.h  SuitSupplyObservation.h  TargetAIPlacer.h  ZeroAIPlacer.h
include/spades_ai/neuralnet/: Layer.h  NetworkCodec.h  Neuralnet.h  Node.h  WeightRandomizer.h
include/spades_ai/placer/: AIPlacer.h  DefaultPlacer.h  NetAIPlacer.h  RandomAIPlacer.h  TargetAIPlacer.h  ZeroAIPlacer.h
include/table/: Deck.h  PortableRandom.h
src/: Spades.cpp  spades.cpp
src/data/: Move.cpp  PortableRandom.cpp  Score.cpp  SpadesMemento.cpp  State.cpp
src/data/card/: Card.cpp  CardComparison.cpp  CardValue.cpp  CardValueSerialization.cpp
src/history/: HistoryState.cpp  SpadesCommand.cpp  SpadesCommandOrder.cpp  SpadesHistory.cpp
src/rules/: BidVariation.cpp  BidVariationController.cpp  Deck.cpp  ScoreSettings.cpp  Trick.cpp  TrumpVariation.cpp  TrumpVariationController.cpp  Turn.cpp
src/spades_ai/: AIAction.cpp  AIBid.cpp  AIController.cpp  AIObservation.cpp  Analyze.cpp  DefaultPlacer.cpp  NetAIPlacer.cpp  Observation.cpp  RandomAIPlacer.cpp  SuitSupplyObservation.cpp
src/spades_ai/logic/: Action.cpp  NetAction.cpp  NetUtils.cpp
src/spades_ai/neuralnet/: Layer.cpp  NetworkCodec.cpp  Neuralnet.cpp  Node.cpp  WeightRandomizer.cpp
test/: test0.cpp  testAIBid.cpp  testAPI.cpp  testAnalyze.cpp  testBidVariation.cpp  testDeck.cpp  testGlobal.cpp  testRandom.cpp  testScore.cpp  testSerialization.cpp  testStateValidity.cpp  testTrickWin.cpp  testTrumpVariation.cpp  testUndoRedo.cpp  test_pch.h
